--- a/style.css
+++ b/style.css
@@ -116,6 +116,7 @@ a.infobox {
     margin-top: 25px;
     height: 40px;
 }
+
 /*=======================info-box-full======================*/
 #info-box-full {
     background-color: rgba(255, 255, 255, 0.8);
@@ -124,6 +125,68 @@ a.infobox {
     margin: auto;
     margin-top: 12px;
     padding: 10px;
+   
+    
 }
-#info-box-full img{width: 100%}
-#info-box-full h3{text-align: center;}
+#info-box-full img {
+    width: 100%;
+}
+#info-box-full h3 {
+    text-align: center;
+}
+
+/*=======================WEATHER======================*/
+
+img.info-box-weather-icon {
+    height: 26px;
+    width: 30px !important;
+    margin: 10px;
+    float: left;
+}
+
+h1.info-box-weather-icon {
+    font-size: 65px;
+    font-weight: 200;
+    padding: 0;
+    margin: 0;
+}
+
+table {
+    width: 100%;
+}
+table img {
+    height: 26px;
+    width: 30px !important;
+    margin: 10px;
+    float: left;
+}
+
+td {
+    border-top: 1px solid darkgreen;
+}
+
+/*=======================WEATHER======================*/
+input {
+    width: 98%;
+    height: 25px;
+    margin: 10px 0;
+    border: solid #929292;
+}
+.textarea {
+    width: 100%;
+    height: 65px;
+    margin: 10px;
+    border: 1px solid #929292;
+}
+.button {
+    display: block;
+    width: 94%;
+    background-color: forestgreen;
+    text-align: center;
+    color: white;
+    font-size: 16px;
+    font-weight: 600;
+    margin: 12px;
+    padding:8px 0;
+    text-decoration: none;
+}
