--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
     z-index: 500;
     width: 100%;
     height: 40px;
-    background-color: darkgreen;
+    background-color: #f07c25;
 }
 #tabs-top a {
     text-decoration: none;
@@ -58,7 +58,7 @@ body {
     z-index: 500;
     width: 100%;
     height: 40px;
-    background-color: forestgreen;
+    background-color: #f07c25;
 }
 #tabs-bottom a {
     float: right;
@@ -125,8 +125,6 @@ a.infobox {
     margin: auto;
     margin-top: 12px;
     padding: 10px;
-   
-    
 }
 #info-box-full img {
     width: 100%;
@@ -187,6 +185,6 @@ input {
     font-size: 16px;
     font-weight: 600;
     margin: 12px;
-    padding:8px 0;
+    padding: 8px 0;
     text-decoration: none;
 }
