--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ table img {
 }
 
 td {
-    border-top: 1px solid darkgreen;
+    border-top: 1px solid #f07c25;
 }
 
 /*=======================WEATHER======================*/
@@ -179,7 +179,7 @@ input {
 .button {
     display: block;
     width: 94%;
-    background-color: forestgreen;
+    background-color: #f07c25;
     text-align: center;
     color: white;
     font-size: 16px;
